# onebrc_rust

./: Cargo.toml  Readme.md
doc/: read_asm.md
profiles/: profile-v1.json  profile-v12.json  profile-v13.json  profile-v14.json  profile-v15.json  profile-v16.json  profile-v2.json  profile-v22.json  profile-v3.json  profile-v4.json  profile-v6.json  profile-v7.json  profile-v8.json  profile-v9.json
src/: main.rs  ver1.rs  ver10.rs  ver11.rs  ver12.rs  ver13.rs  ver14.rs  ver15.rs  ver16.rs  ver17.rs  ver18.rs  ver2.rs  ver20.rs  ver20_preload_entry.rs  ver21.rs  ver22.rs  ver23.rs  ver3.rs  ver4.rs  ver5.rs  ver6.rs  ver7.rs  ver8.rs  ver9.rs
