cargo-features = ["profile-rustflags"]

[package]
name = "onebrc_rust"
version = "0.1.0"
edition = "2021"

[features]
debug = []


[dependencies]
memmap2 = "0.9.5"
memchr = "2.7.4"
rustc-hash = "2.1.0"
clap = { version = "4.5.11", features = ["derive"] }
rand = "0.9.0-beta.3"

[profile.release]
#rustflags = ["-C", "target-cpu=native"]
debug = true


[profile.profiling]
debug = true
required-features = ["debug"]
inherits = "release"
#overflow-checks = false

